se agrega la eleccion de cena navidenia

--- a/public/cenaNavidenia/osequioFinDeAnio.html
+++ b/public/cenaNavidenia/osequioFinDeAnio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elección de Cena Navideña</title>
+    <title>Elección de Obsequio Fin de Año</title>
     <link rel="stylesheet" href="cenaNavidenia.css">
     <!-- Firebase App (el core de Firebase SDK) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -13,8 +13,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Elección de Cena Navideña</h1>
-            <p>Por favor, selecciona tu opción preferida para la cena navideña</p>
+            <h1>Elección de Obsequio De Fin De Año</h1>
+            <p>Por favor, selecciona tu opción preferida para obtener de Obsequio</p>
         </header>
 
         <main>
