se agrega fecha u opciones de misa o fiesta

--- a/public/festividadAnual/festividadAnual.html
+++ b/public/festividadAnual/festividadAnual.html
@@ -14,8 +14,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>¡Te esperamos en nuestra Fiesta de Fin de Año!<br>12 de Diciembre 2025</h1>
-            <p>Confirma tu asistencia a la Misa de la Virgen y Fiesta de Fin de Año</p>
+            <h1>¡Te esperamos en nuestra Fiesta de Fin de Año!<br>12 de Diciembre 2025 – 13:00 hrs</h1>
+            <p>
+                La cita es a las <strong>13:00 hrs</strong> para la Misa de la Virgen.<br>
+                Al terminar comenzará la fiesta 🎉
+            </p>
         </header>
 
         <main>
