--- a/public/festividadAnual/festividadAnual.html
+++ b/public/festividadAnual/festividadAnual.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
        <header>
-            <h1>¡Acompáñanos en nuestra Celebración a la Virgen!<br>Este 12 de diciembre de 2025 – 15:00 hrs</h1>
+            <h1>¡Acompáñanos en nuestra Celebración a la Virgen!<br>Este 12 de diciembre del 2025 – 15:00 hrs</h1>
             <p>
                 Te esperamos a las <strong>15:00 hrs</strong> para compartir juntos la misa, y después continuar con la celebración.<br>
                 ¡Será un gusto contar con tu presencia! <strong>Confirma tu asistencia.</strong>
@@ -42,9 +42,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="numEmpleado">Número de empleado:</label>
-                    <input type="text" id="numEmpleado" required placeholder="Ingresa tu número de empleado" class="solo-numeros">
-                    <div class="error-message" id="numEmpleadoError">Por favor ingresa tu número de empleado</div>
+                    <label for="numEmpleado">Número de empleado Actual:</label>
+                    <input type="text" id="numEmpleado" required placeholder="Ingresa tu número de empleado Actual" class="solo-numeros">
+                    <div class="error-message" id="numEmpleadoError">Por favor ingresa tu número de empleado Actual</div>
                 </div>
 
                 <!-- Eliminadas las opciones de misa y fiesta -->
