se actualiza el primer cuatrimestre del anioCON nombres y areas diferentes y que no se pueda editar la hora

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,8 @@
                 
                 <div class="form-item">
                     <label for="fecha">FECHA</label>
-                    <input type="date" id="fecha" readonly>
+                    <div id="fecha-display" class="date-display"></div>
+                    <input type="hidden" id="fecha" name="fecha"> <!-- Campo oculto para el envío -->
                 </div>
                 
                 <div class="form-item full-width">
