Proteger credenciales Firebase con .env - Agregado sistema de variables de entorno (.env) - Creado .env.example como plantilla - Generador automático de firebase-config.js - Actualizados todos los archivos para usar configuración centralizada - Credenciales protegidas con .gitignore - Migrados archivos JS a ES modules

--- a/public/eleccionObsequio/obsequioFinDeAnio.html
+++ b/public/eleccionObsequio/obsequioFinDeAnio.html
@@ -6,10 +6,6 @@
     <title>Elección de Obsequio Fin de Año</title>
     <link rel="stylesheet" href="cenaNavidenia.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Firebase App (el core de Firebase SDK) -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <!-- Firebase Firestore -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
 <body>
     <div class="container">
@@ -82,5 +78,7 @@
     </div>
 
     <script src="cenaNavidenia.js"></script>
+
+    <script type="module" src="cenaNavidenia.js"></script>
 </body>
 </html>
