--- a/public/festividadAnual/festividadAnual.html
+++ b/public/festividadAnual/festividadAnual.html
@@ -6,10 +6,6 @@
     <title>Registro 12 de Diciembre - Celebración Anual</title>
     <link rel="stylesheet" href="./festividadAnual.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Firebase App (el core de Firebase SDK) -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <!-- Firebase Firestore -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
 <body>
     <div class="container">
@@ -73,5 +69,7 @@
     </div>
 
     <script src="./festividadAnual.js"></script>
+
+    <script type="module" src="./festividadAnual.js"></script>
 </body>
 </html>
